--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,9 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Running your app...",
+      "label": "Installing extensions and running your app...",
       "type": "shell",
-      "command": "javac HelloWorld.java && java HelloWorld",
+      "command": "code-server --install-extension redhat.java --install-extension vscjava.vscode-java-debug --install-extension formulahendry.code-runner && javac HelloWorld.java && java HelloWorld",
       "presentation": {
         "reveal": "always",
         "panel": "new"
